--- a/_config.yml
+++ b/_config.yml
@@ -130,10 +130,14 @@ facebook:
 og_image                 :  # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
+# social:
+#  type                   : # Person or Organization (defaults to Person)
+#  name                   : # If the user or organization name differs from the site's name
+#  links: # An array of links to social media profiles
 social:
-  type                   : # Person or Organization (defaults to Person)
-  name                   : # If the user or organization name differs from the site's name
-  links: # An array of links to social media profiles
+  - icon: notion  # 如果使用 Font Awesome
+    icon_pack: fab
+    link: https://1eeexp3rt.notion.site/W3-c0m3-281b74b71cfb448a81d9c8af9d1d47f3?pvs=74
 
 
 # Analytics
