fix: fix notion site

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,3 +7,5 @@
 main:
   - title: "Notebook"
     url: /Notebook/
+  - title: "Notion"
+    url: https://1eeexp3rt.notion.site/W3-c0m3-281b74b71cfb448a81d9c8af9d1d47f3?pvs=74
